# feature_forge

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLUGINS.md  README.md  mkdocs.yml  pyproject.toml
.claude/handoffs/: 2026-05-02-feature-forge-phases-4-13-complete.md  2026-05-02-feature-forge-phases-4-13.md  2026-05-03-feature-forge-unified-artifacts-implementation.md
.feature_forge_artifacts/: llmfe_iter_0_all.parquet  llmfe_iter_0_kept.parquet
.github/workflows/: benchmark.yml  ci.yml  docs.yml
.planning/: OVERVIEW.md  STATE.md  STYLE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  DEVELOPMENT.md
config/: logging.yaml  settings.yaml
config/experiments/: .gitkeep
config/prompts/: aggregation.yaml  local_pattern.yaml  router.yaml
data/samples/: .gitkeep
docs/: API_KEY_SETUP.md  MALMAS_Technical_Roadmap.md  api_reference.md  index.md  methods.md  migration_guide.md  quick_start.md
docs/javascripts/: jupyter-theme-bridge.js  notebooks.js
docs/notebooks/: 01-quick-start.md  01_getting_started.ipynb  02-agents.md  02_pipeline_deep_dive.ipynb  03-router.md  03_benchmarks_and_artifacts.ipynb  04-iterative-pipeline.md  04_custom_method.ipynb  05-experiment-matrix.md  05_methods_deep_dive.ipynb  06-baselines.md  07-evaluation.md  08-artifacts.md  09-configuration.md  10-method-comparison.md  index.md
docs/notebooks/html/: 01_quick_start.html  02_agents.html  03_router.html  04_iterative_pipeline.html  05_experiment_matrix.html  06_baselines.html  07_evaluation.html  08_artifacts.html  09_configuration.html  10_method_comparison.html
docs/notebooks/html/shared/: shared-1eb441e26f64.js  shared-2219ec645556.js  shared-24e26f8385b9.css  shared-273fc5821cfc.css  shared-7ed062b2aaf7.css  shared-8ae8f754c4bd.js  shared-a4dcc0b722b5.css
docs/plan/: 00_index.md  01_architecture.md  01_consolidate_notebooks.md  02_directory_structure.md  02_llm_code_parsing_research.md  03_key_design_decisions.md  04_implementation_phases.md  05_dependencies.md  06_data_strategy.md  07_observability.md  08_experiment_tracking.md  09_baseline_selection.md  10_experimental_platform_refactor.md  11_platform_refactor_review.md  12_code_generation_improvements.md  13_methods_restructure.md  14_parallelize_code_generation.md  15_notebook_updates_handoff.md  16_prompt_colocation_pydantic.md  17_code_simplification.md
docs/stylesheets/: jupyter-fix.css  notebooks.css
experiments/router_strategies/: .gitkeep
notebooks/: .gitignore  01_getting_started.ipynb  01_overview.py  01_quick_start.py  01_quick_start.qmd  02_agents.py  02_agents.qmd  02_pipeline_deep_dive.ipynb  03_benchmarks_and_artifacts.ipynb  03_router.py  03_router.qmd  04_custom_method.ipynb  04_iterative_pipeline.py  04_iterative_pipeline.qmd  05_experiment_matrix.py  05_experiment_matrix.qmd  05_methods_deep_dive.ipynb  06_baselines.py  06_baselines.qmd  07_evaluation.py  07_evaluation.qmd  08_artifacts.py  08_artifacts.qmd  09_configuration.py  09_configuration.qmd  10_method_comparison.py  10_method_comparison.qmd  _quarto.yml  _utils.py  styles.css
notebooks/_freeze/01_quick_start/execute-results/: html.json
notebooks/_freeze/02_agents/execute-results/: html.json
notebooks/_freeze/03_router/execute-results/: html.json
notebooks/_freeze/04_iterative_pipeline/execute-results/: html.json
notebooks/_freeze/05_experiment_matrix/execute-results/: html.json
notebooks/_freeze/06_baselines/execute-results/: html.json
notebooks/_freeze/07_evaluation/execute-results/: html.json
notebooks/_freeze/08_artifacts/execute-results/: html.json
overrides/: main.html
scripts/: check_docs_references.py  check_repo_hygiene.py  extract_shared_notebook_assets.py  generate_notebook_docs.py  run_pip_audit.py  validate_notebook_embeds.py
security/: pip_audit_allowlist.txt
src/feature_forge/: __init__.py  api.py  config.py  exceptions.py  platform.py  types.py  utils.py
src/feature_forge/agents/: __init__.py  aggregation.py  base.py  cross_compositional.py  local_pattern.py  local_transform.py  router.py  temporal.py  unary.py
src/feature_forge/artifacts/: __init__.py  base.py  comparison.py  dashboard.py  diff.py  schema.py  storage.py
src/feature_forge/baselines/: __init__.py  base.py  caafe.py  llmfe.py  malmus.py  openfe.py
src/feature_forge/data/: __init__.py  ingestion.py  registry.py
src/feature_forge/evaluation/: __init__.py  cv.py  metrics.py  model_factory.py  registry_utils.py  sandbox.py
src/feature_forge/experiment/: __init__.py  matrix.py  mlflow_backend.py  reporter.py  runner.py  tracker.py  wandb_backend.py
src/feature_forge/llm/: __init__.py  base.py  cache.py  factory.py  langfuse_wrapper.py  retry.py
src/feature_forge/memory/: __init__.py  base.py  conceptual.py  persistence.py
src/feature_forge/methods/: __init__.py  _prompting.py  base.py
src/feature_forge/observability/: langfuse_tracer.py  structlog_config.py
src/feature_forge/pipeline/: __init__.py  ablations.py  core.py  iterative.py
src/feature_forge/prompts/: aggregation.txt  code_generation.txt  cross_compositional.txt  local_pattern.txt  local_transform.txt  router.txt  temporal.txt  unary.txt
tests/: conftest.py  strategies.py
tests/benchmarks/: test_performance_smoke.py
tests/integration/: test_artifacts.py  test_baselines.py  test_data_ingestion.py  test_dotenvx_flow.py  test_pipeline.py  test_platform_e2e.py  test_plugin_discovery.py
tests/unit/: test_agents.py  test_api.py  test_artifact_exporter.py  test_artifact_schema.py  test_artifact_storage.py  test_baseline_protocol.py  test_config.py  test_contract.py  test_dataset_registry_discovery.py  test_differential.py  test_evaluation.py  test_experiment.py  test_ingestion.py  test_llm_base.py  test_llm_cache.py  test_llm_factory.py  test_malmus.py  test_memory.py  test_metamorphic.py  test_metric_registry.py  test_model_registry.py  test_observability.py  test_pipeline_core.py  test_platform.py  test_prompt_registries.py  test_property.py  test_refactoring_helpers.py  test_retry.py  test_sandbox.py  test_types.py  test_utils.py
(+50 files in other folders)
