[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-forge"
version = "0.1.0"
description = "Modular experimentation platform for LLM-based multi-agent automated feature engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Feature Forge Team"},
]
keywords = [
    "feature-engineering",
    "llm",
    "machine-learning",
    "automl",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "litellm>=1.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "tqdm>=4.65",
    "diskcache>=5.6",
    "rich>=13.0",
    "structlog>=24.0",
    "langfuse>=2.0",
    "opentelemetry-api>=1.20",
    "wandb>=0.16",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
base = [
    "openfe",
    "caafe",
    "mlflow>=2.10",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mike>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "pip-audit>=0.8",
    "marimo>=0.5",
    "notebook>=7.0",
]

[project.entry-points."feature_forge.agents"]
unary = "feature_forge.agents.unary:UnaryFeatureAgent"
cross_compositional = "feature_forge.agents.cross_compositional:CrossCompositionalAgent"
aggregation = "feature_forge.agents.aggregation:AggregationConstructAgent"
temporal = "feature_forge.agents.temporal:TemporalFeatureAgent"
local_transform = "feature_forge.agents.local_transform:LocalTransformAgent"
local_pattern = "feature_forge.agents.local_pattern:LocalPatternAgent"

[project.entry-points."feature_forge.baselines"]
openfe = "feature_forge.baselines.openfe:OpenFEBaseline"
caafe = "feature_forge.baselines.caafe:CAAFEBaseline"
llmfe = "feature_forge.baselines.llmfe:LLMFEBaseline"
malmus = "feature_forge.baselines.malmus:MalmusBaseline"

[project.urls]
Homepage = "https://github.com/your-org/feature-forge"
Documentation = "https://feature-forge.readthedocs.io"
Repository = "https://github.com/your-org/feature-forge"
Issues = "https://github.com/your-org/feature-forge/issues"

# ─────────────────────────────────────────────────────────────
# Tool Configurations
# ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "PIE",
    "PT",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "openfe.*",
    "caafe.*",
    "xgboost.*",
    "wandb.*",
    "mlflow.*",
    "langfuse.*",
    "diskcache.*",
    "litellm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=feature_forge",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "llm: marks tests that call LLM APIs (expensive)",
    "baseline: marks tests requiring optional baseline packages",
    "integration: marks integration tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/feature_forge"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
