[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature-forge"
version = "0.1.0"
description = "Modular experimentation platform for LLM-based multi-agent automated feature engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Feature Forge Team"},
]
keywords = [
    "feature-engineering",
    "llm",
    "machine-learning",
    "automl",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "rich>=13.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "pyarrow>=23.0.1",
    "nest-asyncio>=1.6.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
caafe = ["caafe>0"]
openfe = ["openfe>0"]
kaggle = ["kaggle"]
lightgbm = ["lightgbm>=4.0"]
catboost = ["catboost>=1.2"]
wandb = ["wandb>=0.16"]
mlflow = ["mlflow>=2.10"]
litellm = ["litellm>=1.40"]
observability = [
    "opentelemetry-api>=1.20",
    "langfuse>=2.0",
    "wandb>=0.16",
    "diskcache>=5.6",
    "pyarrow>=23.0.1",
]
all = [
    "caafe>0",
    "openfe>0",
    "kaggle",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "wandb>=0.16",
    "mlflow>=2.10",
    "litellm>=1.40",
    "opentelemetry-api>=1.20",
    "langfuse>=2.0",
    "diskcache>=5.6",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "pip-audit>=0.8",
    "marimo>=0.5",
    "notebook>=7.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mike>=2.0",
    "pymdown-extensions>=10.0",
    "ipykernel>=6.0",
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
    "diskcache>=5.6.3",
    "langfuse>=4.5.1",
    "opentelemetry-api>=1.41.1",
    "hypothesis>=6.152.7",
    "mkdocs-jupyter>=0.26.3",
    "types-tqdm>=4.67.3.20260508",
]

[project.entry-points."feature_forge.agents"]
unary = "feature_forge.agents.unary:UnaryFeatureAgent"
cross_compositional = "feature_forge.agents.cross_compositional:CrossCompositionalAgent"
aggregation = "feature_forge.agents.aggregation:AggregationConstructAgent"
temporal = "feature_forge.agents.temporal:TemporalFeatureAgent"
local_transform = "feature_forge.agents.local_transform:LocalTransformAgent"
local_pattern = "feature_forge.agents.local_pattern:LocalPatternAgent"

[project.entry-points."feature_forge.baselines"]
openfe = "feature_forge.baselines.openfe:OpenFEBaseline"
caafe = "feature_forge.baselines.caafe:CAAFEBaseline"
llmfe = "feature_forge.baselines.llmfe:LLMFEBaseline"
malmus = "feature_forge.baselines.malmus:MalmusBaseline"

[project.entry-points."feature_forge.metrics"]
auc = "feature_forge.evaluation.metrics:auc_score"
acc = "feature_forge.evaluation.metrics:acc_score"
f1 = "feature_forge.evaluation.metrics:f1_score_metric"
rmse = "feature_forge.evaluation.metrics:rmse_score"
mae = "feature_forge.evaluation.metrics:mae_score"
r2 = "feature_forge.evaluation.metrics:r2_score_metric"
nrmse = "feature_forge.evaluation.metrics:nrmse_score"

[project.entry-points."feature_forge.models"]
xgboost = "feature_forge.evaluation.model_factory:create_xgboost"
lightgbm = "feature_forge.evaluation.model_factory:create_lightgbm"
catboost = "feature_forge.evaluation.model_factory:create_catboost"
random_forest = "feature_forge.evaluation.model_factory:create_random_forest"
mlp = "feature_forge.evaluation.model_factory:create_mlp"

[project.entry-points."feature_forge.datasets"]
titanic = "feature_forge.data.registry:titanic_loader"
house_prices = "feature_forge.data.registry:house_prices_loader"

[project.urls]
Homepage = "https://github.com/your-org/feature-forge"
Documentation = "https://feature-forge.readthedocs.io"
Repository = "https://github.com/your-org/feature-forge"
Issues = "https://github.com/your-org/feature-forge/issues"

# ─────────────────────────────────────────────────────────────
# Tool Configurations
# ─────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "PIE",
    "PT",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "openfe",
    "caafe",
    "xgboost",
    "wandb",
    "mlflow",
    "langfuse",
    "diskcache",
    "sklearn.*",
    "lightgbm",
    "catboost",
    "kaggle",
    "opentelemetry",
    "tqdm",
    "litellm",
    "seaborn",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=feature_forge",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "llm: marks tests that call LLM APIs (expensive)",
    "baseline: marks tests requiring optional baseline packages",
    "integration: marks integration tests",
    "unit: fast isolated tests",
    "property: hypothesis-based property tests",
    "metamorphic: metamorphic relation tests",
    "contract: API surface contract tests",
    "differential: reference comparison tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/feature_forge"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
